Noteworthy Changes in ssocr Releases
====================================

Version ?.??.? (????-??-??):
----------------------------
 * Print warning when the two options -a, --absolute-threshold and -T,
   --iter-threshold are used together because -a inhibits -T
 * Improved performance when reading image data via standard input
 * Improved performance when using gray_stretch together with -g
 * Improved performance when using option -p, --process-only together
   with only the grayscale and/or mirror commands
 * Documentation improvements

Version 2.24.1 (2024-12-11):
----------------------------
 * Print warning when an unknown charset name is ignored
 * Print warning when an unknown luminance formula name is ignored
 * Fix one debug message to be printed only with -P, --debug-output
 * Documentation improvements

Version 2.24.0 (2024-06-22):
----------------------------
 * Fix decimal separator recognition when widest digit is a one
 * Add recognition of lower case variant of character 'h' to full charset
 * Add recognition of lower case variant of character 'r' to full charset
 * Documentation improvements
 * Error, warning, and debug message improvements

Version 2.23.1 (2023-05-18):
----------------------------
 * The man page uses the latest ssocr release date as its date (to help
   in creating reproducible builds)
 * Documentation improvements

Version 2.23.0 (2023-05-01):
----------------------------
 * New option -N, --min-segment to specify the minimum width and height of
   a segment, for both scanline based and ratio based character recognition
 * New option -M, --min-char-dims to specify minimum character dimensions
 * The option -d, --number-digits now also accepts a range description

Version 2.22.2 (2023-04-24):
----------------------------
 * Documentation improvements

Version 2.22.1 (2022-01-25):
----------------------------
 * Fix build failure with Imlib 1.7.5 (pkg-config replaces imlib2-config)

Version 2.22.0 (2021-11-07):